Unique model for species | Exit from program | Move while loop